Fix: timeslots height for Scheduler on ActivitiesPage

--- a/BlazorTool.Client/Components/ActivityList.razor
+++ b/BlazorTool.Client/Components/ActivityList.razor
@@ -83,7 +83,7 @@
     [Parameter]
     public bool isExternalWindow { get; set; } = false;
 
-    private List<Activity>? activities;
+    public List<Activity>? activities;
     private string bodyListClass = "activity-list-body";
     private bool IsWindowVisible { get; set; } = false;
     private bool ShowActivitiesWindows { get; set; } = false;
