--- a/BlazorTool.Client/Pages/ActivitiesPage.razor.css
+++ b/BlazorTool.Client/Pages/ActivitiesPage.razor.css
@@ -1,4 +1,4 @@
-::deep .month-view-slot {
+﻿::deep .month-view-slot {
     height: 150px;
     /* Use flexbox to control alignment */
     display: flex;
@@ -106,4 +106,21 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+}
+
+
+::deep .compact-scheduler .k-slot-cell {
+    /* уменьшаем минимальную высоту «строки» слота */
+    height:auto;
+    /* выравниваем внутренний контент по новой высоте */
+    line-height: 10px;
+    /* при необходимости подправьте внутренние отступы */
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+/* (необязательно) сделать подписи времени более «плотными» */
+::deep .compact-scheduler .k-scheduler-times,
+.compact-scheduler .k-scheduler-times * {
+    line-height: 10px;
 }
